--- a/views/template/aside.ejs
+++ b/views/template/aside.ejs
@@ -1,3 +1,20 @@
+  
+    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+      <symbol id="check2" viewBox="0 0 16 16">
+        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+      </symbol>
+      <symbol id="circle-half" viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"/>
+      </symbol>
+      <symbol id="moon-stars-fill" viewBox="0 0 16 16">
+        <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
+        <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
+      </symbol>
+      <symbol id="sun-fill" viewBox="0 0 16 16">
+        <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
+      </symbol>
+    </svg>
+  
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
@@ -26,7 +43,7 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->         
-          <li class="nav-header">MENU</li>
+          <li class="nav-header">Gestionar</li>
           <li class="nav-item">
             <a href="/users" class="nav-link">              
               <i class="nav-icon fas fa-solid fa-users"></i>
@@ -36,13 +53,78 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/notes" class="nav-link">              
-              <i class="nav-icon fas fa-solid fa-clone"></i><!--fa fa w2schools-->
+            <a href="/tasks" class="nav-link">              
+              <i class="nav-icon fas fa-columns"></i><!--fa fa w2schools-->
               <p>
-                Anotaciones                
+                Tareas                
               </p>
             </a>
-          </li>            
+          </li> 
+          <li class="nav-item">
+            <a href="/events" class="nav-link">              
+              <i class="nav-icon far fa-calendar-alt"></i><!--fa fa w2schools-->
+              <p>
+                Eventos                
+              </p>
+            </a>
+          </li> 
+          <li class="nav-header">Utilidades</li>
+
+          <li class="nav-item">
+            <a href="/notes" class="nav-link">              
+              <i class="nav-icon fas fa-edit"></i><!--fa fa w2schools-->
+              <p>
+                Nota rapida                
+              </p>
+            </a>
+          </li>  
+          <li class="nav-item">
+            <a href="/chats" class="nav-link">              
+              <i class="nav-icon far fa-envelope"></i><!--fa fa w2schools-->
+              <p>
+                Chat                
+              </p>
+            </a>
+          </li> 
+          <li class="nav-header">Sesión</li>  
+          <!--///////////////////////////////////////////////////////-->
+              
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="nav-icon far fa-image"></i>
+              <p>
+                Apariencia
+                <i class="fas fa-angle-left right"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <button type="submit" class="dropdown-item d-flex align-items-center rounded" data-bs-theme-value="light" aria-pressed="false">
+                  <i class="nav-icon far fa-sun nav-link">&nbsp; Iluminado</i>
+                  <!-- Iluminado -->
+                  
+                </button>
+              </li>
+              <li class="nav-item">
+                <button type="submit" class="dropdown-item d-flex align-items-center rounded" data-bs-theme-value="dark" aria-pressed="false">
+                  <i class="nav-icon far fa-moon nav-link">&nbsp; Oscuro</i>
+                  
+                  
+                </button>
+              </li>
+              <li class="nav-item">
+                <button type="submit" class="dropdown-item d-flex align-items-center rounded" data-bs-theme-value="auto" aria-pressed="true">
+                  <i class=" fa fa-magic nav-link">&nbsp; Automatico</i>
+                  
+                  
+                </button>
+              </li>
+            </ul>
+          </li>
+          
+          </li> <!--///////////////////////////////////////////////////////-->
+
+
           <li class="nav-item">
             <a href="/logout" class="nav-link">
               <i class="nav-icon fas fa-solid fa-arrow-right-from-bracket"></i>
