--- a/views/template/navbar.ejs
+++ b/views/template/navbar.ejs
@@ -6,18 +6,33 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/" class="nav-link"></a>
-      </li>      
+        <a href="/" class="nav-link">Home</a>
+      </li>    
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="/contact" class="nav-link">Contact</a>
+      </li>    
     </ul>
 
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
+
+
+      <li class="nav-item">
+        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
+          <i class="nav-icon far fa-image"></i>
+        </a>
+      </li>
+
       <!-- Navbar Search --> 
       <li class="nav-item">
         <a class="nav-link" href="/logout" role="button">
-          <i class="fas fa-arrow-right-from-bracket"></i>
+          <i class="nav-icon fas fa-arrow-right-from-bracket"></i>
         </a>
       </li>
+
+
+
+
     </ul>
   </nav>
   <!-- /.navbar -->
