subido rol subscriber

--- a/views/template/aside.ejs
+++ b/views/template/aside.ejs
@@ -32,7 +32,7 @@
           <img src="./../uploads/<%= image %>" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block"> <%= userName %></a>
+          <a class="d-block"> <%= userName %></a>
         </div>
       </div>
       <% } %>
@@ -87,41 +87,7 @@
             </a>
           </li> 
           <li class="nav-header">Sesión</li>  
-          <!--///////////////////////////////////////////////////////-->
-              
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon far fa-image"></i>
-              <p>
-                Apariencia
-                <i class="fas fa-angle-left right"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <button type="submit" class="dropdown-item d-flex align-items-center rounded" data-bs-theme-value="light" aria-pressed="false">
-                  <i class="nav-icon far fa-sun nav-link">&nbsp; Iluminado</i>
-                  <!-- Iluminado -->
-                  
-                </button>
-              </li>
-              <li class="nav-item">
-                <button type="submit" class="dropdown-item d-flex align-items-center rounded" data-bs-theme-value="dark" aria-pressed="false">
-                  <i class="nav-icon far fa-moon nav-link">&nbsp; Oscuro</i>
-                  
-                  
-                </button>
-              </li>
-              <li class="nav-item">
-                <button type="submit" class="dropdown-item d-flex align-items-center rounded" data-bs-theme-value="auto" aria-pressed="true">
-                  <i class=" fa fa-magic nav-link">&nbsp; Automatico</i>
-                  
-                  
-                </button>
-              </li>
-            </ul>
-          </li>
-          
+        
           </li> <!--///////////////////////////////////////////////////////-->
 
 
