--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -1,8 +1,8 @@
 <footer class="main-footer">
     <div class="float-right d-none d-sm-block">
-      <b>Version</b> 7.1.0
+      <b>Version</b> 1.1.0
     </div>
-    <strong>Copyright &copy; 2000-2022 <a href="https://www.gustabin.com">Gustabin</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2023-2024 <a href="https://github.com/Pabloluisroth">SingleCRM</a>.</strong> All rights reserved.
   </footer>
 
   <!-- Control Sidebar -->
@@ -58,6 +58,9 @@
 <script>
   $(document).ready(function () {
       $('#tableUsers').DataTable();
+      $('#tableProfile').DataTable();
+      $('#tableTasks').DataTable();
+      $('#tableNotes').DataTable();
   }); 
 
   function confirmation(id){
@@ -71,6 +74,8 @@
     }).then((result) => {
       if (result.isConfirmed) {
         window.location = '/deleteUser/' + id;
+        window.location = '/deleteTask/' + id;
+        window.location = '/deleteNote/' + id;
       }
     })
   }
