--- a/views/template/aside.ejs
+++ b/views/template/aside.ejs
@@ -20,7 +20,7 @@
     <!-- Brand Logo -->
     <a href="/" class="brand-link">
       <img src="./../img/logo.png" alt="Template Custom Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Template Custom</span>
+      <span class="brand-text font-weight-light">SingleCrm</span>
     </a>
 
     <!-- Sidebar -->
@@ -33,6 +33,7 @@
         </div>
         <div class="info">
           <a class="d-block"> <%= userName %></a>
+     
         </div>
       </div>
       <% } %>
@@ -67,7 +68,7 @@
             <a href="/notes" class="nav-link">              
               <i class="nav-icon fas fa-edit"></i><!--fa fa w2schools-->
               <p>
-                Nota rapida                
+                Notas comunes              
               </p>
             </a>
           </li>  
@@ -75,7 +76,6 @@
           <li class="nav-header">Sesión</li>  
         
           </li> <!--///////////////////////////////////////////////////////-->
-
 
           <li class="nav-item">
             <a href="/logout" class="nav-link">
