--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -2,7 +2,7 @@
     <div class="float-right d-none d-sm-block">
       <b>Version</b> 1.1.0
     </div>
-    <strong>Copyright &copy; 2023-2024 <a href="https://github.com/Pabloluisroth">SingleCRM</a>.</strong> All rights reserved.
+    <strong>MIT License &nbsp; <a href="https://github.com/Pabloluisroth" target="_blank">SingleCRM</a></strong> 
   </footer>
 
   <!-- Control Sidebar -->
@@ -79,6 +79,7 @@
       }
     })
   }
+
 </script>
 </body>
 </html>
