--- a/views/createTask.ejs
+++ b/views/createTask.ejs
@@ -21,11 +21,28 @@
                       <label for="descripcion" class="form-label">Descripcion</label>
                       <input type="text" class="form-control" id="descripcion" name="descripcion" tabindex="3" required>
                     </div>
+
+                    <div class="mb-3">
+                      <label for="sumario" class="form-label">Sumary</label>
+                      <input type="text" class="form-control" id="sumario" name="sumario" tabindex="4" required>
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="asignada" class="form-label">Asignada</label>
+                      <input type="text" class="form-control" id="asignada" name="asignada" tabindex="5" required>
+                    </div>
+
                     <div class="mb-3">
                       <label for="vencimiento" class="form-label">Vencimiento</label>
-                      <input type="date" class="form-control" id="vencimiento" name="vencimiento" tabindex="4" required>
+                      <input type="date" class="form-control" id="vencimiento" name="vencimiento" tabindex="6" required>
                     </div>
-                    <button type="submit" class="btn btn-primary" tabindex="5">Submit</button>
+
+                    <div class="mb-3">
+                      <label for="estado" class="form-label">Estate</label>
+                      <input type="text" class="form-control" id="estado" name="estado" tabindex="7 " required>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" tabindex="8">Submit</button>
                     <a href="/tasks" class="btn btn-secondary">Cancel</a>
                   </form>            
             </div>
