--- a/views/createUser.ejs
+++ b/views/createUser.ejs
@@ -28,7 +28,13 @@
                         <option value="Subscriber">Subscriber</option>
                       </select>
                     </div>
-                    <button type="submit" class="btn btn-primary" tabindex="4">Submit</button>
+
+                    <div class="mb-3">
+                      <label for="since" class="form-label">Since</label>
+                      <input type="date" class="form-control" id="since" name="since" tabindex="4">
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" tabindex="5">Submit</button>
                     <a href="/users" class="btn btn-secondary">Cancel</a>
                   </form>            
             </div>
