--- a/views/usersBanned.ejs
+++ b/views/usersBanned.ejs
@@ -4,18 +4,18 @@
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-    <%- include('template/breadcrumb', {module: 'Users'}) %>
+    <%- include('template/breadcrumb', {module: 'Users Banneds'}) %>
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-md-12">            
             <div class="container">
-              <a href="/createUser" class="btn btn-primary mb-2"> <i class="fa-regular fa-square-plus"></i></a>
               <table id="example1" class="table table-bordered table-striped text-center mt-4">
                 <thead>
                   <tr class="bg-primary text-white">
                     <th scope="col">#ID</th>
+                    <th scope="col">Bans</th>
                     <th scope="col">Name</th>
                     <th scope="col">Email</th>
                     <th scope="col">Rol</th>
@@ -28,23 +28,20 @@
         
                     <tr>
                       <th><%= user.id %></th>
+                      <th><%= user.bans %></th>
                       <th><%= user.name %></th>
                       <th><%= user.email %></th>
                       <th><%= user.rol %></th>
                       <th><%= user.since %></th>
                       <td>
-                        <a href="/editUser/<%= user.id %>" class="btn btn-info"> <i class="fa-regular fa-pen-to-square"></i></a>
+<!--
+                       
+                        <a href="/revertBansUser/:id/<%= user.id %>" onclick="returnBans(<%= user.id %> <%= user.bans %>);" class="btn btn-info"> <i class=" fa fa-eraser"></i></a>
+                        <a href="/deletedUser/<%= user.id %>" onclick="confirmation(<%= user.id %>);" class="btn btn-danger"> <i class=" fa-regular fa-trash-can"></i></a>
+-->
 
-                        <!--
-
-                         <a href="/bansUser/<%= user.id %>" onclick="confirmationBans(<%= user.id %> <%= user.bans %>);" class="btn btn-warning"> <i class=" fa fa-ban"></i></a> 
-                         <a href="/deletedUser/<%= user.id %>" onclick="confirmation(<%= user.id %>);" class="btn btn-danger"> <i class="fa-regular fa-trash-can"></i></a>
-
-                        -->
-
-                        <a onclick="confirmationBans(<%= user.id %> <%= user.bans %>);" class="btn btn-warning"> <i class=" fa fa-ban"></i></a> 
-                        <a onclick="confirmation(<%= user.id %>);" class="btn btn-danger"> <i class="fa-regular fa-trash-can"></i></a>
-                                      
+                        <a onclick="returnBans(<%= user.id %> <%= user.bans %>);" class="btn btn-info"> <i class=" fa fa-eraser"></i></a>  
+                        <a onclick="confirmation(<%= user.id %>);" class="btn btn-danger"> <i class="fa-regular fa-trash-can"></i></a>             
                       </td>
                     </tr>                              
                   <% }) %>
