--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -61,6 +61,8 @@
       $('#tableProfile').DataTable();
       $('#tableTasks').DataTable();
       $('#tableNotes').DataTable();
+      $('#tableAgends').DataTable();
+      $('#tableTaskCompleted').DataTable();
   }); 
 
   function confirmation(id){
@@ -76,6 +78,83 @@
         window.location = '/deleteUser/' + id;
         window.location = '/deleteTask/' + id;
         window.location = '/deleteNote/' + id;
+        window.location = '/deleteAgend/' + id;
+        window.location = '/deleteProfile/' + id;
+      }
+    })
+  }
+
+  function confirmationBans(id){
+    Swal.fire({
+      title: 'Are you sure you want to ban the user with record ' + id + ' ?',
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Confirm'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        window.location = '/bansUser/' + id;
+      }
+    })
+  }
+
+  function returnBans(id){ // retornar
+    Swal.fire({
+      title: 'Are you sure you want to remove ban the user ban with record ' + id + ' ?',
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Confirm'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        window.location = '/revertBansUser/' + id;
+      }
+    })
+  }
+
+  function confirmationReturnTask(id){
+    Swal.fire({
+      title: 'Are you sure you want to return this task to the lis with record ' + id + ' ?',
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Confirm'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        window.location = '/returnTask/' + id;
+      }
+    })
+  }
+
+  function confirmationTerminatedTask(id){
+    Swal.fire({
+      title: 'Are you sure you want to finish this task ' + id + ' ?',
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Confirm'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        window.location = '/completedTask/' + id;
+      }
+    })
+  }
+
+  function confirmationAsignedTask(id){
+    Swal.fire({
+      title: 'Are you sure about assigning this task ' + id + ' ?',
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Confirm'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        window.location = '/asignatedTask/' + id;
       }
     })
   }
