modularizando la app

--- a/views/taskAsigned.ejs
+++ b/views/taskAsigned.ejs
@@ -34,9 +34,9 @@
 
                         <!--
 
-                           <a href="/taskDetails/<%= task.id %>" onclick="confirmationAsignedTask(<%= task.id %>);" class="btn btn-secondary"> <i class="fa fa-paper-plane"></i></a> 
-                           <a href="/taskDetails/<%= task.id %>" onclick="confirmationTerminatedTask(<%= task.id %>);" class="btn btn-primary"> <i class="fa fa-hourglass-end"></i></a> 
-                           <a href="/taskDetails/<%= task.id %>" onclick="confirmation(<%= task.id %>);" class="btn btn-danger"> <i class="fa-regular fa-trash-can"></i></a> 
+                           <a href="//<%= task.id %>" onclick="confirmationAsignedTask(<%= task.id %>);" class="btn btn-secondary"> <i class="fa fa-paper-plane"></i></a> 
+                           <a href="//<%= task.id %>" onclick="confirmationTerminatedTask(<%= task.id %>);" class="btn btn-primary"> <i class="fa fa-hourglass-end"></i></a> 
+                           <a href="//<%= task.id %>" onclick="confirmation(<%= task.id %>);" class="btn btn-danger"> <i class="fa-regular fa-trash-can"></i></a> 
                         -->
 
                         <a onclick="confirmationAsignedTask(<%= task.estado %>);" class="btn btn-secondary"> <i class="fa fa-paper-plane"></i></a> 
