--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,23 +4,195 @@
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-    <%- include('template/breadcrumb', {module: 'Contact'}) %>
+    <%- include('template/breadcrumb', {module: 'SingleCrm'}) %>
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <div class="container-fluid">
         <div class="row mb-2">
-          <div class="col-md-12">            
-           
-            <div class="card">
-                <div class="card-header">
-                  Hy  <%= userName%>
+          <div class="col-md-12">  
+
+
+            <div class="container py-3">
+              <!-- Card Start -->
+              <div class="card">
+                <div class="row ">
+            
+                  <div class="col-md-7 px-3">
+                    <div class="card-block px-6">
+                      <h4 class="card-title"><%= userName%> </h4>
+                      <p class="card-text">
+                        The Carousel code can be replaced with an img src, no problem. The added CSS brings shadow to the card and some adjustments to the prev/next buttons and the indicators is rounded now. As in Bootstrap 3
+                      </p>
+                      <p class="card-text">Made for usage, commonly searched for. Fork, like and use it. Just move the carousel div above the col containing the text for left alignment of images</p>
+                      <br>
+                      <a href="/users" class="mt-auto btn btn-primary  ">Users</a>
+                    </div>
+                  </div>
+                  <!-- Carousel start -->
+                  <div class="col-md-5">
+                    <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img class="d-block" src="https://soyadmin.com/wp-content/uploads/2018/07/Terminal-Administracion-de-usuarios-en-UnixLinux-Crear-eliminar-y-modificar.png" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- End of carousel -->
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Informacion de Contacto</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt vel, fugit consectetur voluptatum autem sapiente nesciunt sint similique repudiandae animi nemo aperiam, pariatur nostrum exercitationem eos eligendi excepturi supuesto ea explicabo, oficia eveniet delectus tenetur velit suscipit! At sequi doloribus aut saepe dolore modi eius est id placeat eligendi asperiores maiores qui provident harum, ex oficia? Dolore quasi, et nobis autem hic aut non recusandae acususamus consequuntur alias veritatis, earum dignissimos eveniet, laborum iste ut adipisci quis eos illo quibusdam eius? Quos eaque quam quia deleniti esse odio excepturi reiciendis, totam inventore eveniet earum qui, magni tempora, est ipsum rem optio cum aliquam nulla. Praesentium tempora, quae nobis sapiente sint tenetur numquam animi possimus, sunt, iste eligendi debitis reprehenderit itaque minus officiis minima! Necessitatibus commodi deserunt aut aliquid accusantium pariatur iste dolorum odio maxime, placeat, ullam doloremque? Rerum aspernatur id cum repudiandae doloremque illo numquam. Odit labore ad temporibus quae voluptates totam hic ipsam dolores rem repellendus reprehenderit praesentium asperiores nisi, commodi debitis? Totam quis, illo iusto quae voluptas, voluptatum similique quod explicabo dignissimos alias, esse nostrum ad optio eveniet dolore est! Cupiditate, molestias eos vero et eius officiis fugit fuga ipsa amet veritatis, cumque voluptate! Facilis praesentium quaerat fuga.</p>
-                  <a href="/" class="btn btn-primary">Go somewhere</a>
-                </div>
+              </div>
+              <!-- End of card -->
+            
             </div>
+
+            <div class="container py-3">
+              <!-- Card Start -->
+              <div class="card">
+                <div class="row ">
+            
+                  <div class="col-md-7 px-3">
+                    <div class="card-block px-6">
+                      <h4 class="card-title"><%= userName%> </h4>
+                      <p class="card-text">
+                        The Carousel code can be replaced with an img src, no problem. The added CSS brings shadow to the card and some adjustments to the prev/next buttons and the indicators is rounded now. As in Bootstrap 3
+                      </p>
+                      <p class="card-text">Made for usage, commonly searched for. Fork, like and use it. Just move the carousel div above the col containing the text for left alignment of images</p>
+                      <br>
+                      <a href="/tasks" class="mt-auto btn btn-primary  ">Tasks</a>
+                    </div>
+                  </div>
+                  <!-- Carousel start -->
+                  <div class="col-md-5">
+                    <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img class="d-block" src="https://www.grupocibernos.com/hs-fs/hubfs/beesuite/Tareas%20GTD-1.png?width=538&name=Tareas%20GTD-1.png" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- End of carousel -->
+                </div>
+              </div>
+              <!-- End of card -->
+            
+            </div>
+
+            <div class="container py-3">
+              <!-- Card Start -->
+              <div class="card">
+                <div class="row ">
+            
+                  <div class="col-md-7 px-3">
+                    <div class="card-block px-6">
+                      <h4 class="card-title"><%= userName%> </h4>
+                      <p class="card-text">
+                        The Carousel code can be replaced with an img src, no problem. The added CSS brings shadow to the card and some adjustments to the prev/next buttons and the indicators is rounded now. As in Bootstrap 3
+                      </p>
+                      <p class="card-text">Made for usage, commonly searched for. Fork, like and use it. Just move the carousel div above the col containing the text for left alignment of images</p>
+                      <br>
+                      <a href="/events" class="mt-auto btn btn-primary  ">Events</a>
+                    </div>
+                  </div>
+                  <!-- Carousel start -->
+                  <div class="col-md-5">
+                    <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img class="d-block" src="https://img.freepik.com/vector-premium/gestion-eventos-planificador-boda-organizador-profesional-gerente-planificacion-eventos-conferencias_501813-2158.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- End of carousel -->
+                </div>
+              </div>
+              <!-- End of card -->
+            
+            </div>
+
+
+            <div class="container py-3">
+              <!-- Card Start -->
+              <div class="card">
+                <div class="row ">
+            
+                  <div class="col-md-7 px-3">
+                    <div class="card-block px-6">
+                      <h4 class="card-title"><%= userName%> </h4>
+                      <p class="card-text">
+                        The Carousel code can be replaced with an img src, no problem. The added CSS brings shadow to the card and some adjustments to the prev/next buttons and the indicators is rounded now. As in Bootstrap 3
+                      </p>
+                      <p class="card-text">Made for usage, commonly searched for. Fork, like and use it. Just move the carousel div above the col containing the text for left alignment of images</p>
+                      <br>
+                      <a href="/agends" class="mt-auto btn btn-primary  ">Agend</a>
+                    </div>
+                  </div>
+                  <!-- Carousel start -->
+                  <div class="col-md-5">
+                    <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img class="d-block" src="https://images.vexels.com/media/users/3/135249/isolated/preview/1b3e2006c49d0a6847f81576d74f5088-siluetas-de-iconos-planos-de-usuarios.png" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- End of carousel -->
+                </div>
+              </div>
+              <!-- End of card -->
+            
+            </div>
+
+            <div class="container py-3">
+              <!-- Card Start -->
+              <div class="card">
+                <div class="row ">
+            
+                  <div class="col-md-7 px-3">
+                    <div class="card-block px-6">
+                      <h4 class="card-title"><%= userName%> </h4>
+                      <p class="card-text">
+                        The Carousel code can be replaced with an img src, no problem. The added CSS brings shadow to the card and some adjustments to the prev/next buttons and the indicators is rounded now. As in Bootstrap 3
+                      </p>
+                      <p class="card-text">Made for usage, commonly searched for. Fork, like and use it. Just move the carousel div above the col containing the text for left alignment of images</p>
+                      <br>
+                      <a href="/notes" class="mt-auto btn btn-primary  ">Notes</a>
+                    </div>
+                  </div>
+                  <!-- Carousel start -->
+                  <div class="col-md-5">
+                    <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img class="d-block" src="https://img.freepik.com/free-vector/illustration-reminder-note_53876-27152.jpg?size=338&ext=jpg&ga=GA1.1.1826414947.1699574400&semt=ais" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- End of carousel -->
+                </div>
+              </div>
+              <!-- End of card -->
+            
+            </div>
+            
+           
+
+
+
+          
+             
+             <br>
+            <br>
+             
+
+
+
+
+
+           
 
           </div>
         </div>
