--- a/views/template/aside.ejs
+++ b/views/template/aside.ejs
@@ -18,7 +18,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="/" class="brand-link">
+    <a href="/contact" class="brand-link">
       <img src="./../img/logo.png" alt="Template Custom Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">SingleCrm</span>
     </a>
@@ -29,7 +29,7 @@
       <% if(typeof userName != 'undefined'){ %>
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="./../uploads/<%= image %>" class="img-circle elevation-2" alt="User Image">
+          <a href="/profiles"><img src="./../uploads/<%= image %>" class="img-circle elevation-2" alt="User Image"></a> 
         </div>
         <div class="info">
           <a class="d-block"> <%= userName %></a>
@@ -100,31 +100,6 @@
             </ul>
           </li>
 
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-calendar-check"></i>
-              <span class="badge badge-secondary right"></span>
-              <p>
-                Eventos
-                <i class="fas fa-angle-left right"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="/events" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Creadas</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="/eventsCompleted" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Completados</p>
-                </a>
-              </li>
-            </ul>
-          </li>
-
           <li class="nav-header">Utilidades</li>
 
           <li class="nav-item">
@@ -147,14 +122,9 @@
           <li class="nav-header">Sesión</li>  
         
           </li> <!--///////////////////////////////////////////////////////-->
-          <li class="nav-item">
-            <a href="/profiles" class="nav-link">
-              <i class="nav-icon fas fa-solid fa fa-user"></i>
-              <p>
-                My Perfil
-              </p>
-            </a>
-          </li>
+         
+
+
           <li class="nav-item">
             <a href="/logout" class="nav-link">
               <i class="nav-icon fas fa-solid fa-arrow-right-from-bracket"></i>
